# vitool

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: DESIGN_BRIEF.md  TECH.md
scripts/: gen-icon.cjs
src/: api.ts  format.ts  main.ts  store.ts  styles.css  toast.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  youtube.rs
