[package]
name = "vitool"
version = "1.0.0"
description = "viTool — YouTube → транскрипт, превью и дата публикации"
authors = ["viTool"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "vitool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

[profile.release]
opt-level = "s"     # оптимизация по размеру (лёгкий бинарник)
lto = true          # link-time optimization
codegen-units = 1
panic = "abort"
strip = true
